tests/pos/i9069/Wrapper.scala
sealed trait Foo
object Foo with
  case object Baz extends Foo
case class Bar(x: Int) extends Foo
